Add SCM info + prepare to release

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+ Copyright 2013 Peergreen S.A.S. All rights reserved.
+ Proprietary and confidential.
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -12,6 +22,19 @@
   <groupId>com.peergreen.maven</groupId>
   <artifactId>git-scm-provider</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+
+  <name>Peergreen Git SCM Provider</name>
+  <description>
+    This Maven SCM provider for git VCS enforce Peergreen's tag name convention:
+    uppercase with underscores for dot (.) and dash (-).
+    Example: com.peergreen:peergreen-scm:1.0.0-M1 will become PEERGREEN_SCM_1_0_0_M1
+  </description>
+
+  <scm>
+    <connection>scm:git:https://forge.peergreen.com/git/git/maven/git-scm-provider.git</connection>
+    <developerConnection>scm:git:https://forge.peergreen.com/git/git/maven/git-scm-provider.git</developerConnection>
+    <url>https://forge.peergreen.com/git/summary/?r=maven/git-scm-provider.git</url>
+  </scm>
 
   <dependencies>
     <dependency>
@@ -50,5 +73,20 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>peergreen.release</id>
+      <name>Peergreen Release Nexus</name>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <url>https://forge.peergreen.com/nexus/content/repositories/releases/</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
 
 </project>
