--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>peergreen-pom</artifactId>
     <groupId>com.peergreen</groupId>
@@ -21,7 +19,7 @@
 
   <groupId>com.peergreen.maven</groupId>
   <artifactId>git-scm-provider</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Peergreen Git SCM Provider</name>
   <description>
@@ -34,6 +32,7 @@
     <connection>scm:git:https://forge.peergreen.com/git/git/maven/git-scm-provider.git</connection>
     <developerConnection>scm:git:https://forge.peergreen.com/git/git/maven/git-scm-provider.git</developerConnection>
     <url>https://forge.peergreen.com/git/summary/?r=maven/git-scm-provider.git</url>
+    <tag>GIT_SCM_PROVIDER_1_0_0</tag>
   </scm>
 
   <dependencies>
